# redd

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-and-publish.yml  release.yml
examples/: demo.py  subreddit_hot_posts.py
src/redd/: __init__.py  _async_client.py  _client.py  _exceptions.py  _parsing.py  _version.py
src/redd/adapters/: __init__.py  _user_agents.py  http_async.py  http_sync.py
src/redd/domain/: __init__.py  enums.py  models.py
src/redd/ports/: __init__.py  http.py
tests/: conftest.py  test_async_client.py  test_client.py  test_models.py  test_parsing.py
